# trackingdemo

./: .gitignore  CURSOR_MEMORY.md  PIPELINE_OVERVIEW.md  README.md  modelhealthdemo.code-workspace
backend/: .gitignore  CAPABILITIES.md  PIPELINE.md  environment.yml  pyproject.toml  requirements.txt  run.py
backend/src/: main.py
backend/src/db/: supabase.py
backend/src/routers/: click_to_track.py  processing.py  videos.py
backend/src/services/: __init__.py  bar_tracker.py  barbell_detector.py  form_analyzer.py  pose_estimator.py  pose_service.py  trajectory_tracker.py  weight_detector.py  yolo_detector.py  yolo_pose_estimator.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/videos/: route.ts
frontend/src/app/videos/[id]/: modelhealthdemo.code-workspace  page.tsx
frontend/src/components/: BarPathChart.tsx  CalibrationStep.tsx  DataExport.tsx  ExerciseTypeSelector.tsx  MovementMetrics.tsx  ObjectClickSelector.tsx  PersonSelector.tsx  ProcessedVideoViewer.tsx  ProcessingPipeline.tsx  TrajectoryCanvas.tsx  VideoPlayer.tsx  VideoUpload.tsx  WeightDetectionModal.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  tabs.tsx  tooltip.tsx
frontend/src/lib/: api.ts
frontend/src/types/: database.ts  index.ts
supabase/: config.toml
